{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 28,
  "lineage": "b3548683-7203-b079-388c-2f20b8b246e6",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023185aa6f1f7bafb",
            "arn": "arn:aws:ec2:us-east-1:475100560521:elastic-ip/eipalloc-023185aa6f1f7bafb",
            "association_id": "eipassoc-07acd16e381bf7dd2",
            "domain": "vpc",
            "id": "eipalloc-023185aa6f1f7bafb",
            "instance": "i-0e366e76be543998c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a362e9aaa4eac0c2",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-220-53-59.compute-1.amazonaws.com",
            "public_ip": "3.220.53.59",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-node-a-eip"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-a-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:475100560521:instance/i-0c7b7af3a5ed5b870",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7b7af3a5ed5b870",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03ce58ba492dda6e2"
              }
            ],
            "primary_network_interface_id": "eni-03ce58ba492dda6e2",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-54-84-48-95.compute-1.amazonaws.com",
            "public_ip": "54.84.48.95",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-010402379fb20dc5a",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00232c52b2f086c49",
            "tags": {
              "Name": "dermatech-infra-node-a-server"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-a-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-034c5a0295cd1732a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "475100560521",
            "id": "i-0c7b7af3a5ed5b870",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.app_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475100560521:security-group/sg-034c5a0295cd1732a",
            "description": "Security Group for Application Worker Nodes (Bastion Protected)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Unrestricted Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034c5a0295cd1732a",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "Microservices Traffic from QA Gateway",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "SSH Access from QA Bastion Only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dermatech-infra-node-a-sg",
            "name_prefix": "",
            "owner_id": "475100560521",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dermatech-infra-node-a-sg"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-a-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2da2d18990a7c7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "475100560521",
            "id": "sg-034c5a0295cd1732a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475100560521:internet-gateway/igw-0b08807e0fb89925c",
            "id": "igw-0b08807e0fb89925c",
            "owner_id": "475100560521",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-node-a-igw"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-a-igw"
            },
            "vpc_id": "vpc-0e2da2d18990a7c7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475100560521:route-table/rtb-02925ecf9a90f057a",
            "id": "rtb-02925ecf9a90f057a",
            "owner_id": "475100560521",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b08807e0fb89925c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dermatech-infra-node-a-public-rt"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-a-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2da2d18990a7c7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "475100560521",
            "id": "rtb-02925ecf9a90f057a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0179a70d7d885fcca",
            "region": "us-east-1",
            "route_table_id": "rtb-02925ecf9a90f057a",
            "subnet_id": "subnet-00232c52b2f086c49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475100560521:subnet/subnet-00232c52b2f086c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00232c52b2f086c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475100560521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-node-a-public-subnet"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-a-public-subnet"
            },
            "vpc_id": "vpc-0e2da2d18990a7c7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "475100560521",
            "id": "subnet-00232c52b2f086c49",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475100560521:vpc/vpc-0e2da2d18990a7c7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0438691b5e2566ec1",
            "default_route_table_id": "rtb-05c8f3d1fe5a14808",
            "default_security_group_id": "sg-053c9d4650e7938dc",
            "dhcp_options_id": "dopt-d4747faf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2da2d18990a7c7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c8f3d1fe5a14808",
            "owner_id": "475100560521",
            "region": "us-east-1",
            "tags": {
              "Environment": "infra-node-a",
              "Name": "dermatech-infra-node-a-vpc"
            },
            "tags_all": {
              "Environment": "infra-node-a",
              "Name": "dermatech-infra-node-a-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "475100560521",
            "id": "vpc-0e2da2d18990a7c7f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}